# design-patterns

Behavioral/ChainOfResponsibility/: CMakeLists.txt  main.cpp
Behavioral/ChainOfResponsibility/Handler/: BaseHandler.cpp  BaseHandler.h
Behavioral/ChainOfResponsibility/Handler/Impl/: PrimaryHandler.cpp  PrimaryHandler.h  SecondaryHandler.cpp  SecondaryHandler.h  TertiaryHandler.cpp  TertiaryHandler.h
Behavioral/ChainOfResponsibility/Request/: Request.cpp  Request.h
Behavioral/TemplateMethod/: CMakeLists.txt  main.cpp
Behavioral/TemplateMethod/PizzaMaker/: BasePizzaMaker.cpp  BasePizzaMaker.h
Behavioral/TemplateMethod/PizzaMaker/Impl/: MargheritaPizzaMaker.cpp  MargheritaPizzaMaker.h  PestoPizzaMaker.cpp  PestoPizzaMaker.h
Behavioral/Visitor/: CMakeLists.txt  main.cpp
Behavioral/Visitor/Shape/: BaseShape.cpp  BaseShape.h
Behavioral/Visitor/Shape/Impl/: CircleShape.cpp  CircleShape.h  QuadrilateralShape.cpp  QuadrilateralShape.h
Behavioral/Visitor/Visitor/: Visitor.cpp  Visitor.h
Behavioral/Visitor/Visitor/Impl/: ExportImageVisitor.cpp  ExportImageVisitor.h  RenderShapeVisitor.cpp  RenderShapeVisitor.h
Creational/Factory/: CMakeLists.txt  main.cpp
Creational/Factory/Factory/: VehicleFactory.cpp  VehicleFactory.h
Creational/Factory/FactoryProducts/: Vehicle.cpp  Vehicle.h
Creational/FactoryMethod/: CMakeLists.txt  main.cpp
Creational/FactoryMethod/GameBackground/: GameBackground.cpp  GameBackground.h
Creational/FactoryMethod/GameBackground/Impl/: DesertGameBackground.cpp  DesertGameBackground.h  ForestGameBackground.cpp  ForestGameBackground.h
Creational/FactoryMethod/PlatformGame/: PlatformGame.cpp  PlatformGame.h
Creational/FactoryMethod/PlatformGame/Impl/: DesertPlatformGame.cpp  DesertPlatformGame.h  ForestPlatformGame.cpp  ForestPlatformGame.h
Creational/Singleton/MeyersSingleton/: CMakeLists.txt  Settings.cpp  Settings.h  main.cpp
Structural/Composite/: CMakeLists.txt  main.cpp
Structural/Composite/Base/: BaseImage.h  (+1 more)
Structural/Decorator/: CMakeLists.txt  main.cpp
Structural/Decorator/Component/: BaseView.cpp  BaseView.h
Structural/Decorator/Component/Impl/: ImageView.cpp  ImageView.h
Structural/Decorator/Decorator/: ViewBaseDecorator.cpp  ViewBaseDecorator.h
Structural/Decorator/Decorator/Impl/: ViewOutlineDecorator.cpp  ViewOutlineDecorator.h  ViewScrollDecorator.cpp  ViewScrollDecorator.h
(+17 files in other folders)
